python-graph
A library for working with graphs in Python
--------------------------------------------------------------------------------

CHANGELOG


Release 1.3.0	[??? ??, ????]

Enhancements:
	Tree transversals (preorder and postorder).

Fixes:

Important API Changes:
	get_nodes() is now nodes();
	get_edges() is now edges();
	get_neighbors() is now neighbors();
	get_incidents() is now incidents();
	get_order() is now order();
	get_degree() is now degree().


Release 1.2.0	[Sep 09, 2008]

Enhancements:
	Moved to new class style;
	Graphs and digraphs are separated classes now;
	Added level-based ordering to breadth first search;
	Graph object is now iterable;
	Graph object is now a container and graphobj[nodeid] iterates too;
	Support for node and edge attributes (Issue 5);
	Node deletion.
	
Fixes:
	Install now works with a prefix (Issue 10);
	Shortest path spanning trees did not had an explicit root.

Important API Changes:
	breadth_first_search() now returns a tuple;
	Arrow methods are gone. Use class digraph + edge methods for directed graphs now.


Release 1.1.1	[Sep 04, 2008]

Enhancements:
	Improved install script.
	
Fixes:
	DOT Language output now works for nodes/edges labelled with spaces.
	
Important API Changes:
	get_neighbours() is now get_neighbors() (Issue 9).


Release 1.1.0	[Aug 31, 2008]

Enhancements:
	Hypergraph support (Issue 4);
	Complete and complement graph generation;
	Weights in random generated graphs (Issue 8).

Fixes:
	Fixed bug in cut-node identification;
	Fixed bug causing wrong results for graphs with nodes labelled with values that evaluate to False (Issue 7).

Important API Changes:
	get_edges() now return all edges in the graph;
	get_neighbours() has the former behaviour of get_edges().


Release 1.0.0	[Aug 01, 2008]

Adds some operations;
Random graph generation;
Cut-vertex/cut-edge identification.


Release 0.85	[Jul 27, 2008]

Adds DOT-Language output (Issue 1);
Install script included (Issue 3).


Release 0.75	[Jul 06, 2008]
